# x402-Developer-CLI

./: Cargo.toml  INTEGRATION.md  INTEGRATION_TEST_REPORT.md  PUBLISHING.md  README.md
my-weather-api/: .env.example  .gitignore  README.md
my-weather-api/config/: x402.toml
src/: facilitator.rs  lib.rs  main.rs  project.rs  wallet.rs
src/x402/: deploy.rs  facilitator.rs  mod.rs  project.rs  test.rs  wallet.rs
