[package]
name = "x402-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
colored = "2.1"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
