[package]
name = "x402-cli"
version = "1.0.0"
edition = "2021"
description = "A comprehensive developer CLI for project scaffolding, wallet management, and payment testing."
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/sambhuyadav/x402-Developer-CLI"
homepage = "https://github.com/sambhuyadav/x402-Developer-CLI#readme"
documentation = "https://docs.rs/crate/x402-cli/"
keywords = ["x402", "cli", "aptos", "blockchain", "payment", "wallet", "facilitator", "developer", "automation"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
colored = "2.1"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
